<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/vehicle_details"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="8dp">

		<TextView
			android:id="@+id/make_model_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="10dp"
			android:maxLines="1"
			android:text="@string/car_stub_name"
			android:textColor="@color/BLACK"
			android:textSize="22sp"
			android:textStyle="bold"/>

		<FrameLayout
			android:layout_width="200dp"
			android:layout_height="150dp"
			android:layout_gravity="center_horizontal">

			<ImageView
				android:id="@+id/photo"
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:src="@drawable/ic_rent_a_car"/>
		</FrameLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginTop="10dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_person_black"/>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/num_of_passengers"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_number"
						android:textSize="14sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_passengers"
						android:textSize="14sp"/>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_luggage_black"/>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/num_of_bags"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_number"
						android:textSize="14sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_bags"
						android:textSize="14sp"/>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_door_black"/>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/num_of_doors"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_number"
						android:textSize="14sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="2dp"
						android:text="@string/car_stub_doors"
						android:textSize="14sp"/>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_gas_station_black"/>

				<TextView
					android:id="@+id/fuel_type"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:text="@string/car_stub_petrol"
					android:textSize="14sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_ac_unit_black"/>

				<TextView
					android:id="@+id/airCon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:text="@string/car_stub_empty"
					android:textSize="14sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:src="@drawable/ic_gear_black"/>

				<TextView
					android:id="@+id/transmission"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:text="@string/car_stub_empty"
					android:textSize="14sp"/>
			</LinearLayout>

		</LinearLayout>
		<RelativeLayout
			android:id="@+id/vendor_info"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/vendor_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:text="@string/car_stub_vendor"
				android:textColor="@color/colorAccent"
				android:textSize="20sp"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:orientation="vertical">

				<TextView
					android:id="@+id/price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/car_stub_price"
					android:textColor="@color/colorAccent"
					android:textStyle="bold"/>

				<TextView
					android:id="@+id/per_day"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/car_stub_per_day"/>
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>

	<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
									   xmlns:app="http://schemas.android.com/apk/res-auto"
									   android:id="@+id/book_now_cardview"
									   android:layout_width="match_parent"
									   android:layout_height="wrap_content"
									   android:layout_alignParentBottom="true"
									   android:layout_marginStart="8dp"
									   android:layout_marginTop="8dp"
									   android:layout_marginEnd="8dp"
									   android:layout_marginBottom="8dp"
									   android:backgroundTint="@color/colorAccent"
									   app:cardCornerRadius="4dp">

		<TextView
			android:id="@+id/book_now_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="16dp"
			android:text="@string/book_now"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="22sp"
			android:textStyle="bold"/>

	</androidx.cardview.widget.CardView>
</RelativeLayout>